# whisper-onnx-python

./: .gitignore  .gitmodules  README.md  install.sh  jetson_install.sh  new_test.py  pyproject.toml  requirements.txt  setup.py
examples/: example_assistant.py  keyboard_prompt_assistant.py  vad_collection_assistant.py  vad_collecton_assistant.py
whisper/: __init__.py  decoding.py  model.py  transcribe.py
